Finished jwt authorizations, fixed docker-compose, changes in openapi
